--- a/contact.html
+++ b/contact.html
@@ -75,17 +75,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <form>
+                    <form method="post" action="https://formspree.io/f/mpzvjayv">
                         <div class="mb-3">
-                            <input type="text" placeholder="Name" class="form-control form-control-lg" />
+                            <input type="text" placeholder="Name" class="form-control form-control-lg" name="cutomer" />
                         </div>
                         <div class="mb-3">
-                            <input type="email" placeholder="Email" class="form-control form-control-lg" />
+                            <input type="email" placeholder="Email" class="form-control form-control-lg " name="email" />
                         </div>
 
                         <div class="mb-3">
                             <textarea class="form-control form-control-lg" rows="10"
-                                placeholder="Message US"></textarea>
+                                placeholder="Message US" name="message"></textarea>
                         </div>
 
                         <div class="d-grid">
